Update htto docs links

--- a/docs/_releases/v4.5.2.md
+++ b/docs/_releases/v4.5.2.md
@@ -3,7 +3,7 @@ title: v4.5.2 Release Notes
 slug: v4-5-2
 ---
 
-> See [.NET Core Documentation](http://docs.servicestack.net/netcore) for the latest information on ServiceStack's .NET Core support.
+> See [.NET Core Documentation](https://docs.servicestack.net/netcore) for the latest information on ServiceStack's .NET Core support.
 
 ![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/release-notes/netcore-banner.png?t)
 
@@ -141,9 +141,9 @@ The Live Demos cover a broad spectrum of ServiceStack features including:
 <tr>
   <td colspan="2">
     <b>Features</b> - 
-    Real-time <a href="http://docs.servicestack.net/server-events.html">Server Events</a>
-    and <a href="http://docs.servicestack.net/javascript-server-events-client.html">JavaScript Client</a>,
-    Twitter, Facebook and Github <a href="http://docs.servicestack.net/authentication-and-authorization.html">OAuth Providers</a>
+    Real-time <a href="https://docs.servicestack.net/server-events.html">Server Events</a>
+    and <a href="https://docs.servicestack.net/javascript-server-events-client.html">JavaScript Client</a>,
+    Twitter, Facebook and Github <a href="https://docs.servicestack.net/authentication-and-authorization.html">OAuth Providers</a>
   </td>
 </tr>
 <tr>
@@ -185,10 +185,10 @@ The Live Demos cover a broad spectrum of ServiceStack features including:
 <tr>
   <td colspan="2">
     <b>Features</b> - 
-    Simple <a href="http://docs.servicestack.net/authentication-and-authorization.html">Auth and OAuth Providers</a>,
-    <a href="http://docs.servicestack.net/authentication-and-authorization.html#requiredrole-and-requiredpermission-attributes">Role-based Security</a>,
-    <a href="http://docs.servicestack.net/servicestack-integration.html">MVC Integration</a>,
-    <a href="http://docs.servicestack.net/ss-utils-js.html">ss-utils.js</a>
+    Simple <a href="https://docs.servicestack.net/authentication-and-authorization.html">Auth and OAuth Providers</a>,
+    <a href="https://docs.servicestack.net/authentication-and-authorization.html#requiredrole-and-requiredpermission-attributes">Role-based Security</a>,
+    <a href="https://docs.servicestack.net/servicestack-integration.html">MVC Integration</a>,
+    <a href="https://docs.servicestack.net/ss-utils-js.html">ss-utils.js</a>
   </td>
 </tr>
 <tr>
@@ -230,7 +230,7 @@ The Live Demos cover a broad spectrum of ServiceStack features including:
 <tr>
   <td colspan="2">
     <b>Features</b> - 
-    Fully-queryable <a href="http://docs.servicestack.net/autoquery-rdbms.html">RDBMS AutoQuery Services</a>,
+    Fully-queryable <a href="https://docs.servicestack.net/autoquery-rdbms.html">RDBMS AutoQuery Services</a>,
     <a href="https://github.com/ServiceStack/ServiceStack.OrmLite">OrmLite.Sqlite</a>,
     <a href="http://stackapis.netcore.io/ss_admin/autoquery/">AutoQuery Viewer</a>
   </td>
@@ -275,7 +275,7 @@ The Live Demos cover a broad spectrum of ServiceStack features including:
   <td colspan="2">
     <b>Features</b> - 
     File Uploads, 
-    <a href="http://docs.servicestack.net/http-utils.html">HTTP Utils</a>
+    <a href="https://docs.servicestack.net/http-utils.html">HTTP Utils</a>
   </td>
 </tr>
 <tr>
@@ -403,7 +403,7 @@ The Live Demos cover a broad spectrum of ServiceStack features including:
 <tr>
   <td colspan="2">
     <b>Features</b> - 
-    REST File Management and <a href="http://docs.servicestack.net/virtual-file-system.html">Virtual File System</a>
+    REST File Management and <a href="https://docs.servicestack.net/virtual-file-system.html">Virtual File System</a>
   </td>
 </tr>
 <tr>
@@ -445,10 +445,10 @@ The Live Demos cover a broad spectrum of ServiceStack features including:
 <tr>
   <td colspan="2">
     <b>Features</b> - 
-    <a href="http://docs.servicestack.net/autoquery-rdbms.html">RDBMS AutoQuery Services</a>,
+    <a href="https://docs.servicestack.net/autoquery-rdbms.html">RDBMS AutoQuery Services</a>,
     <a href="http://stackapis.netcore.io/ss_admin/autoquery/">AutoQuery Viewer</a>,
-    <a href="http://docs.servicestack.net/http-caching.html">HTTP Caching</a> and 
-    <a href="http://docs.servicestack.net/cacheresponse-attribute.html">CacheResponse attributes</a>
+    <a href="https://docs.servicestack.net/http-caching.html">HTTP Caching</a> and 
+    <a href="https://docs.servicestack.net/cacheresponse-attribute.html">CacheResponse attributes</a>
   </td>
 </tr>
 <tr>
@@ -788,7 +788,7 @@ We also agree with this default, .NET Core seems to be centered around embracing
 developer ecosystem where .NET's default **PascalCase** protrudes in a sea of **camelCase** and 
 **snake_case** JSON APIs. This won't have an impact on .NET Service Clients or Text Serialization which 
 supports case-insensitive properties, however Ajax and JS clients will need to be updated to use matching properties.
-You can use [ss-utils normalize()](http://docs.servicestack.net/ss-utils-js.html#normalize-and-normalizekey) methods
+You can use [ss-utils normalize()](https://docs.servicestack.net/ss-utils-js.html#normalize-and-normalizekey) methods
 to help with handling both conventions by recursively normalizing and converting all properties to **lowercase**.
 
 ### .NET Core Container Adapter
@@ -933,7 +933,7 @@ support HttpListener self-hosts behind ServiceStack's `IRequest` abstractions.
 
 We're happy to report that ServiceStack's HTTP Handlers can also be registered as a .NET Core module in 
 the `IApplicationBuilder` pipeline. This lets you for instance return the same information as ServiceStack's
-[?debug=requestinfo](http://docs.servicestack.net/debugging.html#request-info) route for any unhandled 
+[?debug=requestinfo](https://docs.servicestack.net/debugging.html#request-info) route for any unhandled 
 requests by registering the `RequestInfoHandler` as the last module in .NET Core's `IApplicationBuilder` 
 pipeline, e.g:
 
@@ -1013,7 +1013,7 @@ In many ways this turned out to be a blessing in disguise as by using MVC's impl
 access to new MVC .NET Core features and its surrounding ecosystem like Tag Helpers. MVC also takes care 
 of live-reloading Razor Views behind-the-scenes so we're also able to get the same iterative development 
 experience we're used to. By using MVC Views we also naturally get good tooling support which 
-[can be a dark art in .NET 4.5](http://docs.servicestack.net/razor-notes.html)
+[can be a dark art in .NET 4.5](https://docs.servicestack.net/razor-notes.html)
 which was tightly coupled to **Web.config** configuration and therefore poorly supported in Self-Hosting 
 Console Apps. 
 
@@ -1081,7 +1081,7 @@ And registered in your AppHost with:
 Plugins.Add(new WireFormat());
 ```
 
-Which [like other formats](http://docs.servicestack.net/csharp-client.html#httpwebrequest-service-clients) 
+Which [like other formats](https://docs.servicestack.net/csharp-client.html#httpwebrequest-service-clients) 
 can be consumed using the `WireServiceClient` generic Typed Service Client, e.g:
 
 ```csharp
@@ -1095,16 +1095,16 @@ Special thanks to [Scott Mackay](https://github.com/wwwlicious) for contributing
 
 The `MongoDbAuthRepository` has been upgraded to use the latest **v2.3.0** of the **mongocsharpdriver**.
 It was also upgraded to implement `IManageApiKeys` so it can now also be used as the persistent back-end
-for the [API Key AuthProvider](http://docs.servicestack.net/api-key-authprovider.html).
+for the [API Key AuthProvider](https://docs.servicestack.net/api-key-authprovider.html).
 
 Special thanks to [@ivanfioravanti](https://github.com/ivanfioravanti) for contributing the upgrade.
 
-## [Add ServiceStack Reference](http://docs.servicestack.net/add-servicestack-reference.html)
+## [Add ServiceStack Reference](https://docs.servicestack.net/add-servicestack-reference.html)
 
-[Kotlin Add ServiceStack Reference](http://docs.servicestack.net/kotlin-add-servicestack-reference.html)
+[Kotlin Add ServiceStack Reference](https://docs.servicestack.net/kotlin-add-servicestack-reference.html)
 was upgraded to support the latest [v1.04 release of Kotlin](https://blog.jetbrains.com/kotlin/2016/09/kotlin-1-0-4-is-here/).
 
-### [TypeScript Add ServiceStack Reference](http://docs.servicestack.net/typescript-add-servicestack-reference.html)
+### [TypeScript Add ServiceStack Reference](https://docs.servicestack.net/typescript-add-servicestack-reference.html)
 
 TypeScript classes are now being generated in dependency order where any dependent classes are generated first.
 We've also removed `ExportAsTypes` as an inline config option. When preferred you can generate ambient Type 
@@ -1130,17 +1130,17 @@ Please note Facebook will be
 
  - API Documentation added to `RequestContext`, `Service`, and `ServiceStackHost` by [@joelharkes](https://github.com/joelharkes)
  - New `MailRuAuthProvider` available by [@Virab](https://forums.servicestack.net/users/virab/activity)
- - The [JS Minifier](http://docs.servicestack.net/html-css-and-javascript-minification.html) was updated to the latest version by [@RobSchoenaker](https://github.com/RobSchoenaker)
+ - The [JS Minifier](https://docs.servicestack.net/html-css-and-javascript-minification.html) was updated to the latest version by [@RobSchoenaker](https://github.com/RobSchoenaker)
  - ServiceStack.Logging.Elmah now supports logging in Self-Hosts by [@RobSchoenaker](https://github.com/RobSchoenaker)
  - `IRequest` is now available in `ValidationResult`
  - `GetBaseUrl()` is now overridable in `AppHost`
- - `MultiAppSettings` now writes-thru to all [AppSettings providers](http://docs.servicestack.net/appsettings.html)
+ - `MultiAppSettings` now writes-thru to all [AppSettings providers](https://docs.servicestack.net/appsettings.html)
  - `ExecuteMessage()` and `ServiceController` were added to `IAppHost`
  - New Convenience `httpRes.WriteError()` and `httpRes.WriteErrorBody()` extension methods
  - `StartedAt` added to `?debug=requestinfo`
  - `VirtualPath` added to `StaticFileHandler(virtualPath)` constructor
- - [Verb interface markers](http://docs.servicestack.net/csharp-client.html#http-verb-interface-markers) added to client Auth Request DTOs 
- - `HttpUtils.UseEncoding` can be used to override Text Encoding used in [HTTP Utils](http://docs.servicestack.net/http-utils.html)
+ - [Verb interface markers](https://docs.servicestack.net/csharp-client.html#http-verb-interface-markers) added to client Auth Request DTOs 
+ - `HttpUtils.UseEncoding` can be used to override Text Encoding used in [HTTP Utils](https://docs.servicestack.net/http-utils.html)
  - `Config.AllowSessionCookies=false` now suppresses `X-UAId` Cookie
  - Server Events no longer uses the UserName for the Display Name when UserName is a number (Facebook)
 
