--- a/docs/_releases/v4.5.6.md
+++ b/docs/_releases/v4.5.6.md
@@ -64,7 +64,7 @@ client.get(req).then(r => {
 ```
 
 The TypeScript DTOs can then be easily updated by right-clicking on `dtos.ts` to 
-[Update the TypeScript reference](http://docs.servicestack.net/virtual-file-system#updating-html-and-metadata-page-templates)
+[Update the TypeScript reference](https://docs.servicestack.net/virtual-file-system#updating-html-and-metadata-page-templates)
 and generate the TypeScript DTOs for any new Services.
 
 The new Angular2 template also benefits from the improvements added to all Single Page App templates in this release:
@@ -166,7 +166,7 @@ client.get(new ReturnBytes())
 
 ![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/release-notes/swift-logo-banner.jpg)
 
-[Swift Add ServiceStack Reference](http://docs.servicestack.net/swift-add-servicestack-reference) 
+[Swift Add ServiceStack Reference](https://docs.servicestack.net/swift-add-servicestack-reference) 
 has been upgraded to [Swift 3](https://swift.org/blog/swift-3-0-released/) which is now available from 
 [Xcode 8](https://developer.apple.com/library/content/releasenotes/DeveloperTools/RN-Xcode/Introduction.html) 
 and later.
@@ -205,7 +205,7 @@ like adding new files to a project - limiting their usefulness.
 
 To enable the best development experience we can without using an Xcode plugin we've developed the 
 [swiftref OSX command-line utility](https://github.com/ServiceStack/swiftref) to provide a simple command-line
-UX to Add and Update [Swift ServiceStack References](http://docs.servicestack.net/swift-add-servicestack-reference).
+UX to Add and Update [Swift ServiceStack References](https://docs.servicestack.net/swift-add-servicestack-reference).
 
 ### Install swiftref
 
@@ -251,7 +251,7 @@ As an example, you can Update the Server DTOs added in the previous command with
     swiftref TechStacks.dtos.swift
 
 Which also includes any 
-[Customization Options](http://docs.servicestack.net/swift-add-servicestack-reference#swift-configuration) 
+[Customization Options](https://docs.servicestack.net/swift-add-servicestack-reference#swift-configuration) 
 that were manually added.
 
 ### All Swift Example Apps upgraded to Swift 3
@@ -286,7 +286,7 @@ into a **ServiceStackClient** package so it can be easily referenced in Swift PM
 
 ### [Swift TechStacks Console App](https://github.com/ServiceStackApps/swift-techstacks-console)
 
-Together with [Swift Add ServiceStack Reference](http://docs.servicestack.net/swift-add-servicestack-reference)
+Together with [Swift Add ServiceStack Reference](https://docs.servicestack.net/swift-add-servicestack-reference)
 we now have a productive development workflow for building statically-linked native executables that consume
 Typed ServiceStack Services as seen in the new step-by-step guide below showing how to create a simple
 [Swift TechStacks Console App](https://github.com/ServiceStackApps/swift-techstacks-console). 
@@ -437,7 +437,7 @@ to run on the latest stable .NET Core release which as of this release is **.NET
 ## Client/Server Request Compression
 
 Previously compression was limited to 
-[optimized cached Server Responses](http://docs.servicestack.net/http-caching#server-caching) which are also
+[optimized cached Server Responses](https://docs.servicestack.net/http-caching#server-caching) which are also
 supported by default in all Service Clients. 
 
 You can now also elect to compress HTTP Requests in any C#/.NET Service Clients by specifying the Compression 
