--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -11,7 +11,7 @@ Happy New 2018 All! We hope you've all had a long, relaxing break over the holid
 
 Historically ServiceStack releases are focused around "Major release schedules" published along with detailed Release Notes describing new features and changes added in each release. All packages are published together in "lockstep" with the same version number so the effort to upgrade ServiceStack projects can be done all at same time, with low frequency. 
 
-Whilst we want to minimize the effort for Customers to upgrade we also want to make any fixes or enhancements to the previous release available sooner as there are often fixes reported and resolved immediately after each release and made available in our [pre-release packages on MyGet](http://docs.servicestack.net/myget) that most Customers wont get until the next major Release on NuGet. 
+Whilst we want to minimize the effort for Customers to upgrade we also want to make any fixes or enhancements to the previous release available sooner as there are often fixes reported and resolved immediately after each release and made available in our [pre-release packages on MyGet](https://docs.servicestack.net/myget) that most Customers wont get until the next major Release on NuGet. 
 
 ### Enhancement Releases
 
@@ -30,7 +30,7 @@ The `{MAJOR}` is reserved for Major releases like **v5** containing structural c
 
 > Major structural releases should be few and far between with currently no plans for any in the immediate future.
 
-A new `{MINOR}` version will be used for normal "Major" releases which will have a `{PATCH}` version of **0**. An **even** `{PATCH}` version number indicates an "Update" release published to **NuGet** whilst an **odd** version number indicates a "pre-release" version that's only [available on MyGet](http://docs.servicestack.net/myget), e.g:
+A new `{MINOR}` version will be used for normal "Major" releases which will have a `{PATCH}` version of **0**. An **even** `{PATCH}` version number indicates an "Update" release published to **NuGet** whilst an **odd** version number indicates a "pre-release" version that's only [available on MyGet](https://docs.servicestack.net/myget), e.g:
 
   - **v5.0.0** - Current Major Release with structural changes
     - v5.0.2 - Enhancement of Major v5.0.0 Release
@@ -90,7 +90,7 @@ The latest `@servicestack/cli` **v1.0.2** has been updated to include this addit
 
     $ dotnet-new
 
-![](http://docs.servicestack.net/images/ssvs/dotnet-new-list.png)
+![](https://docs.servicestack.net/images/ssvs/dotnet-new-list.png)
 
 Which will let you create an ASP.NET Core App running on the .NET Framework v4.7 with:
 
@@ -547,7 +547,7 @@ All .NET Core 2.0 Templates can be developed using your preferred choice of eith
  
 This makes the `dotnet-new` command globally available which can be run without arguments to view all templates available:
 
-![](http://docs.servicestack.net/images/ssvs/dotnet-new-list.png)
+![](https://docs.servicestack.net/images/ssvs/dotnet-new-list.png)
 
 That can be used to create new projects with:
  
@@ -559,7 +559,7 @@ Example of creating a new Vue SPA project called **Acme**:
  
 The resulting `Acme.sln` can be opened in VS 2017 which will automatically restore and install both the .NET and npm packages upon first load and build. This can take a while to install all client and server dependencies, once finished the `wwwroot` folder will be populated with your generated Webpack App contained within a `/dist` folder alongside a generated `index.html` page. After these are generated you can run your App with **F5** to run your project as normal:
 
-![](http://docs.servicestack.net/images/ssvs/dotnet-new-spa-files.png)
+![](https://docs.servicestack.net/images/ssvs/dotnet-new-spa-files.png)
 
 If using JetBrains Rider the npm packages can be installed by opening `package.json` and clicking on the **"npm install"** tooltip on the **bottom right**. In VS Code you'll need to run `npm install` manually from the command-line.
 
