--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -1526,7 +1526,7 @@ When called with no arguments it will render its unprocessed raw text contents. 
 `{% raw %}{{#raw varname}}{% endraw %}` will instead save the raw text contents to the specified global (`PageResult`) variable and lastly when 
 called with the `appendTo` modifier it will append its contents to the existing variable, or initialize it if it doesn't exist.
 
-This is now the preferred approach used in all [.NET Core and .NET Framework Web Templates](http://docs.servicestack.net/templates-websites) for 
+This is now the preferred approach used in all [.NET Core and .NET Framework Web Templates](https://docs.servicestack.net/templates-websites) for 
 pages and partials to append any custom JavaScript script blocks they need to include in the page, e.g:
 
 ```hbs
@@ -2034,7 +2034,7 @@ that includes the 1-liner:
 ```
 
 Which supports the same content negotiation as a ServiceStack Service where calling it in a browser will generate a 
-[human-friendly HTML Page](http://docs.servicestack.net/html5reportformat):
+[human-friendly HTML Page](https://docs.servicestack.net/html5reportformat):
 
  - [/hello/World](http://blog.web-app.io/hello/World)
 
@@ -2322,7 +2322,7 @@ Then using `AuthFeature.AuthProviders` you can specify which Auth Providers you 
     AuthFeature.AuthProviders TwitterAuthProvider, GithubAuthProvider
 
 Each Auth Provider checks the Web Apps `app.settings` for its Auth Provider specific configuration it needs, e.g. to configure both 
-Twitter and GitHub Auth Providers you would populate it with your [OAuth Apps details](http://docs.servicestack.net/authentication-and-authorization#oauth-configuration):
+Twitter and GitHub Auth Providers you would populate it with your [OAuth Apps details](https://docs.servicestack.net/authentication-and-authorization#oauth-configuration):
 
     oauth.RedirectUrl http://127.0.0.1:5000/
     oauth.CallbackUrl http://127.0.0.1:5000/auth/{0}
@@ -2978,7 +2978,7 @@ package.dependencies.append(
 ```
 
 The only change the to generated DTOs was importing the `ServiceStack` module by default. If you want to continue using the single 
-`JsonServiceClient.swift` source file you will need to [override the DefaultImports](http://docs.servicestack.net/swift-add-servicestack-reference#defaultimports):
+`JsonServiceClient.swift` source file you will need to [override the DefaultImports](https://docs.servicestack.net/swift-add-servicestack-reference#defaultimports):
 
 ```swift
 /*Options:
@@ -3119,7 +3119,7 @@ increased their minimum requirements to .NET Framework **v4.5.2**.
 ### Async overloads in Service Clients
 
 Additional overloads containing `CancellationToken` we're added for every async API in .NET's `JsonServiceClient` and all other
-[.NET HttpWebRequest Service Clients](http://docs.servicestack.net/csharp-client#httpwebrequest-service-clients).
+[.NET HttpWebRequest Service Clients](https://docs.servicestack.net/csharp-client#httpwebrequest-service-clients).
 
 Use these new overloads if you need to cancel Async requests instead of the previous `CancelAsync()` API.
 
@@ -3167,7 +3167,7 @@ appHost.FallbackHandlers.Add((httpMethod, pathInfo, requestFilePath) => ShouldHa
 ### Multitenancy
 
 You can add the `[NamedConnection]` attribute on Request DTOs to 
-[change which database connection](http://docs.servicestack.net/multitenancy#changedb-apphost-registration) your Services `Db` connection is configured with:
+[change which database connection](https://docs.servicestack.net/multitenancy#changedb-apphost-registration) your Services `Db` connection is configured with:
 
 ```csharp
 [NamedConnection("Reporting")]
