--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -3,7 +3,7 @@ title: v4.5.14 Release Notes
 slug: v4-5-14
 ---
 
-We've got something super special in store in this release which has completely changed how we develop .NET server-generated Web Apps that includes a new approach to dramatically simplify .NET Web App development, providing a highly productive development experience whilst maximizing reuse and component sharing. This release also brings support for .NET Core 2.0, new providers for Azure which includes an [MQ Server](http://docs.servicestack.net/messaging) for Azure ServiceBus, a [Virtual File System](http://docs.servicestack.net/virtual-file-system) for Azure Blob Storage and a [Caching Provider](http://docs.servicestack.net/caching) for Azure Table Storage. 
+We've got something super special in store in this release which has completely changed how we develop .NET server-generated Web Apps that includes a new approach to dramatically simplify .NET Web App development, providing a highly productive development experience whilst maximizing reuse and component sharing. This release also brings support for .NET Core 2.0, new providers for Azure which includes an [MQ Server](https://docs.servicestack.net/messaging) for Azure ServiceBus, a [Virtual File System](https://docs.servicestack.net/virtual-file-system) for Azure Blob Storage and a [Caching Provider](https://docs.servicestack.net/caching) for Azure Table Storage. 
 
 With our abstractions containing simple clean interfaces supporting multiple implementations and OrmLite and AutoQuery supporting multiple RDBMS's behind the same Typed API, it's become easier than ever to run your ServiceStack Apps on either a managed AWS or Azure infrastructure.
 
@@ -46,7 +46,7 @@ Clone the [TemplatesBootstrapStarter](https://github.com/NetCoreApps/TemplatesBo
 
 #### ASP.NET v4.5 Bootstrap Starter
 
-For ASP.NET v4.5 projects create a new **ServiceStack ASP.NET Templates with Bootstrap** from the VS.NET Templates in [ServiceStackVS VS.NET Extension](http://docs.servicestack.net/templates-overview#servicestackvs-vsnet-extension) to create an ASP.NET v4.5 Project using [ServiceStack's recommended project structure](http://docs.servicestack.net/create-your-first-webservice#step-4-exploring-the-servicestack-solution):
+For ASP.NET v4.5 projects create a new **ServiceStack ASP.NET Templates with Bootstrap** from the VS.NET Templates in [ServiceStackVS VS.NET Extension](https://docs.servicestack.net/templates-overview#servicestackvs-vsnet-extension) to create an ASP.NET v4.5 Project using [ServiceStack's recommended project structure](https://docs.servicestack.net/create-your-first-webservice#step-4-exploring-the-servicestack-solution):
 
 [![](https://sharpscript.net/assets/img/screenshots/ssvs-bootstrap.png)](https://github.com/ServiceStack/ServiceStackVS)
 
@@ -70,7 +70,7 @@ In a testament to ASP.NET Core's development model, one of the benefits it enabl
 
 Another reason for our reduced focus around Razor is similar to VB6's one-way consumption of COM APIs, Razor is an "end-user language" for .NET APIs, i.e. server logic embedded in Razor pages is "one-off code" providing minimal utility and code reuse that's only applicable to HTML clients (i.e. Browsers) for the page it's embedded in whilst delivering a worse UX compared to the alternative [API First Development](https://github.com/ServiceStackApps/EmailContacts#api-first-development) model where Web Pages use Ajax as just another client to call the same back-end Services that Mobile and Desktop clients use. 
 
-So instead of having browsers perform full-page POST backs and creating specific Controllers/Services that can only handle browser requests, you'll get better responsiveness, utility and code-reuse by just developing "pure" back-end Services and using JavaScript to make Ajax requests. JavaScript is also much better than C# at being able to [use a generic routine](http://docs.servicestack.net/ss-utils-js#fluent-validation) to automatically update Form UIs with Service's structured error responses where it benefits from reduced development effort.
+So instead of having browsers perform full-page POST backs and creating specific Controllers/Services that can only handle browser requests, you'll get better responsiveness, utility and code-reuse by just developing "pure" back-end Services and using JavaScript to make Ajax requests. JavaScript is also much better than C# at being able to [use a generic routine](https://docs.servicestack.net/ss-utils-js#fluent-validation) to automatically update Form UIs with Service's structured error responses where it benefits from reduced development effort.
 
 In this light it's more important to interoperate with JavaScript than it is to have C# logic embedded in HTML pages.
 
@@ -212,7 +212,7 @@ The benefits of a traditional website is that it doesn't break the web where the
 [![](https://sharpscript.net/assets/img/screenshots/redis-html.png)](http://redis-html.web-app.io)
 
 We've had a sordid history developing Redis UI's which we're built using the popular JavaScript frameworks that appeared dominant at the time but have since seen their ecosystem decline, starting with the
-[Redis Admin UI](http://redisadminui.servicestack.net) built using [Google's Closure Library](https://github.com/google/closure-library) that as it works different to everything else needed a complete rewrite when creating [redisreact.servicestack.net](http://redisreact.servicestack.net) using the hot new React framework, unfortunately it uses React's old deprecated ES5 syntax and Reflux which is sufficiently different from our current recommended [TypeScript + React + Redux + WebPack](http://docs.servicestack.net/templates-single-page-apps) JavaScript SPA Stack, that is going to require a significant refactor to adopt our preferred SPA tech stack.
+[Redis Admin UI](http://redisadminui.servicestack.net) built using [Google's Closure Library](https://github.com/google/closure-library) that as it works different to everything else needed a complete rewrite when creating [redisreact.servicestack.net](http://redisreact.servicestack.net) using the hot new React framework, unfortunately it uses React's old deprecated ES5 syntax and Reflux which is sufficiently different from our current recommended [TypeScript + React + Redux + WebPack](https://docs.servicestack.net/templates-single-page-apps) JavaScript SPA Stack, that is going to require a significant refactor to adopt our preferred SPA tech stack.
 
 #### Beautiful, succinct, declarative code
 
@@ -331,7 +331,7 @@ Contains all the code needed to generate the following API endpoints:
 
 #### Multi platform configurations
 
-In addition to being a .NET Core 2.0 App that runs flawlessly cross-platform on Windows, Linux and OSX, Web Apps can also support multiple RDBMS's and [Virtual File Systems](http://docs.servicestack.net/virtual-file-system) using just configuration:
+In addition to being a .NET Core 2.0 App that runs flawlessly cross-platform on Windows, Linux and OSX, Web Apps can also support multiple RDBMS's and [Virtual File Systems](https://docs.servicestack.net/virtual-file-system) using just configuration:
 
  - [web.sqlite.settings](https://github.com/ServiceStack/dotnet-app/blob/master/src/apps/rockwind/web.sqlite.settings)
  - [web.sqlserver.settings](https://github.com/ServiceStack/dotnet-app/blob/master/src/apps/rockwind/web.sqlserver.settings)
@@ -441,7 +441,7 @@ With all files being sourced from S3 and the App configured to use AWS RDS Postg
 
 #### [DockerFile](https://github.com/sharp-apps/rockwind-aws/blob/master/Dockerfile)
 
-Deployments are also greatly simplified as all that's needed is to deploy the WebApp binary and the app.settings of your Cloud App, e.g. This is the DockerFile for [rockwind-aws.web-app.io](http://rockwind-aws.web-app.io) - deployed to AWS ECS using the deployment scripts in [Rockwind.Aws](https://github.com/sharp-apps/rockwind-aws) as per our [.NET Core Docker Deployment Guideline](http://docs.servicestack.net/deploy-netcore-docker-aws-ecs):
+Deployments are also greatly simplified as all that's needed is to deploy the WebApp binary and the app.settings of your Cloud App, e.g. This is the DockerFile for [rockwind-aws.web-app.io](http://rockwind-aws.web-app.io) - deployed to AWS ECS using the deployment scripts in [Rockwind.Aws](https://github.com/sharp-apps/rockwind-aws) as per our [.NET Core Docker Deployment Guideline](https://docs.servicestack.net/deploy-netcore-docker-aws-ecs):
 
 ```
 FROM microsoft/dotnet:2.0-sdk
@@ -483,13 +483,13 @@ See [NetCoreWebApps/rockwind-azure](https://github.com/sharp-apps/rockwind-azure
 
 Up till now the Apps above only have only used functionality built into ServiceStack, to enable even greater functionality but still retain all the benefits of developing Web Apps you can drop **.dll's** with custom functionality into your Web App's `/plugins` folder. The plugins support in Web Apps is as frictionless as we could make it, there's no configuration to maintain or special interfaces to implement, you can just drop your **existing implementation .dll's** as-is into the App's `/plugins` folder.
 
-Plugins allow "no touch" sharing of [ServiceStack Plugins](http://docs.servicestack.net/plugins),  [Services](http://docs.servicestack.net/create-your-first-webservice), [Template Filters](https://sharpscript.net/docs/methods), [Template Code Pages](https://sharpscript.net/docs/code-pages), [Validators](http://docs.servicestack.net/validation), etc. contained within **.dll's** or **.exe's** dropped in a Web App's [/plugins](https://github.com/ServiceStack/dotnet-app/tree/master/src/apps/plugins/plugins) folder which are auto-registered on startup. The source code for all plugins used in this App were built from the .NET Core 2.0 projects in the [/example-plugins](https://github.com/ServiceStack/dotnet-app/tree/master/src/example-plugins) folder. The [plugins.web-app.io](http://plugins.web-app.io) Web App below walks through examples of using Custom Filters, Services and Validators:
+Plugins allow "no touch" sharing of [ServiceStack Plugins](https://docs.servicestack.net/plugins),  [Services](https://docs.servicestack.net/create-your-first-webservice), [Template Filters](https://sharpscript.net/docs/methods), [Template Code Pages](https://sharpscript.net/docs/code-pages), [Validators](https://docs.servicestack.net/validation), etc. contained within **.dll's** or **.exe's** dropped in a Web App's [/plugins](https://github.com/ServiceStack/dotnet-app/tree/master/src/apps/plugins/plugins) folder which are auto-registered on startup. The source code for all plugins used in this App were built from the .NET Core 2.0 projects in the [/example-plugins](https://github.com/ServiceStack/dotnet-app/tree/master/src/example-plugins) folder. The [plugins.web-app.io](http://plugins.web-app.io) Web App below walks through examples of using Custom Filters, Services and Validators:
 
 [![](https://sharpscript.net/assets/img/screenshots/plugins.png)](http://plugins.web-app.io)
 
 ### Registering ServiceStack Plugins
 
-[ServiceStack Plugins](http://docs.servicestack.net/plugins) can be added to your App by listing it's Type Name in the `features` config entry in [app.settings](https://github.com/sharp-apps/plugins/tree/master/app.settings):
+[ServiceStack Plugins](https://docs.servicestack.net/plugins) can be added to your App by listing it's Type Name in the `features` config entry in [app.settings](https://github.com/sharp-apps/plugins/tree/master/app.settings):
 
 ```
 debug true
@@ -622,7 +622,7 @@ public class AppHost : AppHostBase
 One nice thing from being able to reuse existing AppHost's is being able to develop all back-end C# Services and Custom Filters as a stand-alone .NET Core Project where it's more productive with access to .NET IDE tooling and debugging.
 
 To account for these 2 modes we use `AddIfNotExists` to only register the `SharpPagesFeature` plugin 
-when running as a stand-alone App and add an additional constructor so it reuses the existing `app.settings` as its [IAppSettings](http://docs.servicestack.net/appsettings) provider for is custom App configuration like OAuth App keys required for enabling Sign-In's via with Twitter, Facebook and GitHub when running on `http://localhost:5000` as seen in Chat's [app.settings](https://github.com/sharp-apps/chat/blob/master/app.settings).
+when running as a stand-alone App and add an additional constructor so it reuses the existing `app.settings` as its [IAppSettings](https://docs.servicestack.net/appsettings) provider for is custom App configuration like OAuth App keys required for enabling Sign-In's via with Twitter, Facebook and GitHub when running on `http://localhost:5000` as seen in Chat's [app.settings](https://github.com/sharp-apps/chat/blob/master/app.settings).
 
 After the back-end has been implemented we can build and copy the compiled **Chat.dll** into the Chat's 
 [/plugins](https://github.com/sharp-apps/chat/tree/master/plugins) folder where we can take advantage of the improved development experience for rapidly developing its UI.
@@ -678,7 +678,7 @@ ServiceStack's [existing free-quota restrictions](https://servicestack.net/downl
 
 All ServiceStack Apps now have access to rich introspection and queryability for inspecting remote ServiceStack instances with the new [Metadata Debug Inspector](https://sharpscript.net/docs/servicestack-scripts#debug-template).
 
-The Debug Template is a Service in `SharpPagesFeature` that's pre-registered in [DebugMode](http://docs.servicestack.net/debugging#debugmode). The Service can also be available when not in **DebugMode** by enabling it with:
+The Debug Template is a Service in `SharpPagesFeature` that's pre-registered in [DebugMode](https://docs.servicestack.net/debugging#debugmode). The Service can also be available when not in **DebugMode** by enabling it with:
 
 ```csharp
 Plugins.Add(new SharpPagesFeature { 
@@ -687,7 +687,7 @@ Plugins.Add(new SharpPagesFeature {
 ```
 
 This registers the Service but limits it to Users with the `Admin` role, alternatively you configure an 
-[Admin Secret](http://docs.servicestack.net/debugging#authsecret):
+[Admin Secret](https://docs.servicestack.net/debugging#authsecret):
 
 ```csharp
 SetConfig(new HostConfig { AdminAuthSecret = "secret" })
@@ -791,7 +791,7 @@ We're happy to report `SimpleContainer` is even smaller and faster than Funq and
 
 ## Simple AppSettings
 
-[SimpleAppSettings](https://github.com/ServiceStack/ServiceStack/blob/master/src/ServiceStack.Common/SimpleAppSettings.cs) is an [IAppSettings provider](http://docs.servicestack.net/appsettings) that you can use to maintain substitutable App Configuration without a dependency to `ServiceStack.dll` which can be populated with a string Dictionary:
+[SimpleAppSettings](https://github.com/ServiceStack/ServiceStack/blob/master/src/ServiceStack.Common/SimpleAppSettings.cs) is an [IAppSettings provider](https://docs.servicestack.net/appsettings) that you can use to maintain substitutable App Configuration without a dependency to `ServiceStack.dll` which can be populated with a string Dictionary:
 
 ```csharp
 AppSettings = new SimpleAppSettings(new Dictionary<string, string> {
@@ -809,7 +809,7 @@ IList<string> allowedUsers = AppSettings.GetList("AllowedUsers");
 ## Virtual File System
 
 The major change added in order for Templates to be isolated from the ServiceStack Web Framework was to decouple the 
-[Virtual File System providers](http://docs.servicestack.net/virtual-file-system) from ServiceStack's AppHost and move them 
+[Virtual File System providers](https://docs.servicestack.net/virtual-file-system) from ServiceStack's AppHost and move them 
 to `ServiceStack.Common`. 
 
 This separation makes it easier to use VFS providers outside of ServiceStack AppHost which is a useful abstraction for copying files 
@@ -847,9 +847,9 @@ required, including `using ServiceStack.IO;` if you're using any VFS extension m
 We've added deeper integration with Azure with [ServiceStack.Azure](https://github.com/ServiceStack/ServiceStack.Azure) - a new project
 containing Azure backed managed implementations for popular ServiceStack providers (as we've done with [ServiceStack.Aws](https://github.com/ServiceStack/ServiceStack.Aws)):
 
- - `ServiceBusMqServer` - [MQ Server](http://docs.servicestack.net/messaging) for invoking ServiceStack Services via Azure ServiceBus
- - `AzureBlobVirtualFiles` - [Virtual File System](http://docs.servicestack.net/virtual-file-system) provider using Azure Blob Storage
- - `AzureTableCacheClient` - [Cache Client](http://docs.servicestack.net/caching) provider using Azure Table Storage
+ - `ServiceBusMqServer` - [MQ Server](https://docs.servicestack.net/messaging) for invoking ServiceStack Services via Azure ServiceBus
+ - `AzureBlobVirtualFiles` - [Virtual File System](https://docs.servicestack.net/virtual-file-system) provider using Azure Blob Storage
+ - `AzureTableCacheClient` - [Cache Client](https://docs.servicestack.net/caching) provider using Azure Table Storage
 
 We intend to add support for additional providers in future and make it even easier for ServiceStack Apps to be able to move 
 freely between hosting on an Azure or an AWS managed infrastructure.
@@ -888,7 +888,7 @@ public class AppHost : AppHostBase
 
 ### Azure Table Storage Cache Client
 
-The `AzureTableCacheClient` [Caching provider](http://docs.servicestack.net/caching) lets you use an Azure Table for your App's distributed caching:
+The `AzureTableCacheClient` [Caching provider](https://docs.servicestack.net/caching) lets you use an Azure Table for your App's distributed caching:
 
 ```csharp
 container.Register<ICacheClient>(c => new AzureTableCacheClient(CacheConnectionString));
