Replace x new references with web new

--- a/docs/_releases/v5.6.md
+++ b/docs/_releases/v5.6.md
@@ -904,7 +904,7 @@ Authentication integration allowing each authenticated user to manage their own 
 
 To follow video's example, start with a new **Acme** project from `sharp` .NET Core Template:
 
-    $ web new script Acme
+    $ x new script Acme
 
 Add the `example-validation` mix:
 
@@ -2185,8 +2185,8 @@ protected Pages and Services and auth redirect flow to Sign In and Forbidden pag
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/angular-spa.png)
 
-    $ web new angular-spa ProjectName            # .NET Core
-    $ web new angular-spa-netfx ProjectName      # Classic ASP.NET on .NET Framework
+    $ x new angular-spa ProjectName            # .NET Core
+    $ x new angular-spa-netfx ProjectName      # Classic ASP.NET on .NET Framework
 
 #### mvcauth
 
@@ -2194,7 +2194,7 @@ protected Pages and Services and auth redirect flow to Sign In and Forbidden pag
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/mvcauth.png)
 
-    $ web new mvcauth ProjectName                # .NET Core
+    $ x new mvcauth ProjectName                # .NET Core
 
 #### mvcidentity
 
@@ -2202,7 +2202,7 @@ protected Pages and Services and auth redirect flow to Sign In and Forbidden pag
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/mvcidentity.png)
 
-    $ web new mvcidentity ProjectName            # .NET Core
+    $ x new mvcidentity ProjectName            # .NET Core
 
 #### mvcidentityserver
 
@@ -2210,7 +2210,7 @@ protected Pages and Services and auth redirect flow to Sign In and Forbidden pag
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/mvcidentityserver.png)
 
-    $ web new mvcidentityserver ProjectName      # .NET Core
+    $ x new mvcidentityserver ProjectName      # .NET Core
 
 #### razor
 
@@ -2218,9 +2218,9 @@ protected Pages and Services and auth redirect flow to Sign In and Forbidden pag
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/razor.png)
 
-    $ web new razor ProjectName                  # .NET Core
-    $ web new razor-corefx ProjectName           # ASP.NET Core on .NET Framework
-    $ web new razor-netfx ProjectName            # Classic ASP.NET on .NET Framework
+    $ x new razor ProjectName                  # .NET Core
+    $ x new razor-corefx ProjectName           # ASP.NET Core on .NET Framework
+    $ x new razor-netfx ProjectName            # Classic ASP.NET on .NET Framework
 
 #### react-spa
 
@@ -2228,8 +2228,8 @@ protected Pages and Services and auth redirect flow to Sign In and Forbidden pag
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/react-spa.png)
 
-    $ web new react-spa ProjectName              # .NET Core
-    $ web new react-spa-netfx ProjectName        # Classic ASP.NET on .NET Framework
+    $ x new react-spa ProjectName              # .NET Core
+    $ x new react-spa-netfx ProjectName        # Classic ASP.NET on .NET Framework
 
 #### react-lite
 
@@ -2237,8 +2237,8 @@ protected Pages and Services and auth redirect flow to Sign In and Forbidden pag
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/react-lite.png)
 
-    $ web new react-lite ProjectName             # .NET Core
-    $ web new react-lite-corefx ProjectName      # ASP.NET Core on .NET Framework
+    $ x new react-lite ProjectName             # .NET Core
+    $ x new react-lite-corefx ProjectName      # ASP.NET Core on .NET Framework
 
 #### script
 
@@ -2246,9 +2246,9 @@ protected Pages and Services and auth redirect flow to Sign In and Forbidden pag
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/script.png)
 
-    $ web new script ProjectName                 # .NET Core
-    $ web new script-corefx ProjectName          # ASP.NET Core on .NET Framework
-    $ web new script-netfx ProjectName           # Classic ASP.NET on .NET Framework
+    $ x new script ProjectName                 # .NET Core
+    $ x new script-corefx ProjectName          # ASP.NET Core on .NET Framework
+    $ x new script-netfx ProjectName           # Classic ASP.NET on .NET Framework
 
 #### vue-spa
 
@@ -2256,8 +2256,8 @@ protected Pages and Services and auth redirect flow to Sign In and Forbidden pag
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/vue-spa.png)
 
-    $ web new vue-spa ProjectName                # .NET Core
-    $ web new vue-spa-netfx ProjectName          # Classic ASP.NET on .NET Framework
+    $ x new vue-spa ProjectName                # .NET Core
+    $ x new vue-spa-netfx ProjectName          # Classic ASP.NET on .NET Framework
 
 #### vue-lite
 
@@ -2265,8 +2265,8 @@ protected Pages and Services and auth redirect flow to Sign In and Forbidden pag
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/vue-lite.png)
 
-    $ web new vue-lite ProjectName               # .NET Core
-    $ web new vue-lite-corefx ProjectName        # ASP.NET Core on .NET Framework
+    $ x new vue-lite ProjectName               # .NET Core
+    $ x new vue-lite-corefx ProjectName        # ASP.NET Core on .NET Framework
 
 #### vue-nuxt
 
@@ -2274,8 +2274,8 @@ protected Pages and Services and auth redirect flow to Sign In and Forbidden pag
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/auth/signin/vue-nuxt.png)
 
-    $ web new vue-nuxt ProjectName               # .NET Core
-    $ web new vue-nuxt-netfx ProjectName         # Classic ASP.NET on .NET Framework
+    $ x new vue-nuxt ProjectName               # .NET Core
+    $ x new vue-nuxt-netfx ProjectName         # Classic ASP.NET on .NET Framework
 
 
 ### Optimal Library Bundles
