--- a/docs/_releases/v4.0.46.md
+++ b/docs/_releases/v4.0.46.md
@@ -127,7 +127,7 @@ which is built into VS 2015:
 - [**01-bundle-all**](#01-bundle-all) - optimizes and packages Web App the into `wwwroot` and `Resources` project
 - [**02-package-console**](#02-package-console) - Packages the Console App in `wwwroot_build\apps`
 - [**03-package-winforms**](#03-package-winforms) - Packages the Winforms App in `wwwroot_build\apps`
-- [**04-deploy-webapp**](#04-deploy-webapp) - deploys the Web App in `wwwroot` with MS WebDeploy to any IIS Server using config `wwwroot_build\publish\config.json`
+- [**04-deploy-app**](#04-deploy-app) - deploys the Web App in `wwwroot` with MS WebDeploy to any IIS Server using config `wwwroot_build\publish\config.json`
 
 The template also includes the **ILMerge** tool to merge all .NET .dlls (inc. Resources.dll) into a single,
 cross-platform Console Application .exe that's runnable as-is on any Windows, OSX or Linux server with .NET
