--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -113,14 +113,14 @@ NetCoreTemplates:
    7. react-spa         .NET Core 2.1 React Create App CLI Bootstrap App
    8. angular-lite-spa  .NET Core 2.1 Angular 4 Material Design Lite Webpack App
    9. web               .NET Core 2.1 Empty Website
-  10. rockwind-webapp   .NET Core 2.1 Rockwind Sharp Apps
+  10. rockwind-app   .NET Core 2.1 Rockwind Sharp Apps
   11. selfhost          .NET Core 2.1 self-hosting Console App
   12. mvc               .NET Core 2.1 MVC Website
   13. templates         .NET Core 2.1 Templates Bootstrap Website
   14. razor             .NET Core 2.1 Website with ServiceStack.Razor
   15. parcel            .NET Core 2.1 Parcel TypeScript App
-  16. parcel-webapp     .NET Core 2.1 Parcel Sharp Apps
-  17. bare-webapp       .NET Core 2.1 Bare Sharp Apps
+  16. parcel-app     .NET Core 2.1 Parcel Sharp Apps
+  17. bare-app       .NET Core 2.1 Bare Sharp Apps
 
 NetCoreWebApps:
 
