--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -2715,17 +2715,17 @@ These are the only sources `web new` looks at to create ServiceStack projects, w
    1. angular-lite-spa   .NET Core 2.1 Angular 4 Material Design Lite Webpack App
    2. angular-spa        .NET Core 2.1 Angular 8 CLI Bootstrap App
    3. aurelia-spa        .NET Core 2.1 Aurelia CLI Bootstrap App
-   4. bare-webapp        .NET Core 2.1 Bare Sharp Apps
+   4. bare-app        .NET Core 2.1 Bare Sharp Apps
    5. mvc                .NET Core 2.1 MVC Website
    6. mvcauth            .NET Core 2.2 MVC Website integrated with ServiceStack Auth
    7. mvcidentity        .NET Core 2.2 MVC Website integrated with ServiceStack using MVC Identity Auth
    8. mvcidentityserver  .NET Core 2.1 MVC Website integrated with ServiceStack using IdentityServer4 Auth
    9. parcel             .NET Core 2.1 Parcel TypeScript App
-  10. parcel-webapp      .NET Core 2.1 Parcel Sharp Apps
+  10. parcel-app      .NET Core 2.1 Parcel Sharp Apps
   11. razor              .NET Core 2.1 Website with ServiceStack.Razor
   12. react-lite         .NET Core 2.1 simple + lite (npm-free) React SPA using TypeScript inc bundling + hot reloading
   13. react-spa          .NET Core 2.1 React Create App CLI Bootstrap App
-  14. rockwind-webapp    .NET Core 2.1 Rockwind Sharp Apps
+  14. rockwind-app    .NET Core 2.1 Rockwind Sharp Apps
   15. selfhost           .NET Core 2.1 self-hosting Console App
   16. script             .NET Core 2.1 #Script Pages Bootstrap Website
   17. vue-lite           .NET Core 2.1 simple + lite (npm-free) Vue SPA using TypeScript inc bundling + hot reloading
