--- a/docs/_releases/v5.9.md
+++ b/docs/_releases/v5.9.md
@@ -3427,9 +3427,10 @@ print(response.results);
 
 All [Single Page App Templates](/templates-single-page-apps) have been upgraded to their latest framework libraries versions:
 
+{% capture netcore %}
 | .NET Core C# Templates ||
 |-|-|
-| [angular-spa](https://github.com/NetCoreTemplates/angular-spa)    | .NET Core 3.1 Angular 8 CLI Bootstrap App |
+| [angular-spa](https://github.com/NetCoreTemplates/angular-spa)    | .NET Core 3.1 Angular 9 CLI Bootstrap App |
 | [aurelia-spa](https://github.com/NetCoreTemplates/aurelia-spa)    | .NET Core 3.1 Aurelia CLI Bootstrap App |
 | [react-lite](https://github.com/NetCoreTemplates/react-lite)      | .NET Core 3.1 simple + lite (npm-free) React SPA using TypeScript |
 | [react-spa](https://github.com/NetCoreTemplates/react-spa)        | .NET Core 3.1 React Create App CLI Bootstrap App |
@@ -3439,6 +3440,11 @@ All [Single Page App Templates](/templates-single-page-apps) have been upgraded 
 | [vuetify-nuxt](https://github.com/NetCoreTemplates/vuetify-nuxt)  | .NET Core 3.1 Nuxt.js SPA App with Material Vuetify |
 | [vuetify-spa](https://github.com/NetCoreTemplates/vuetify-spa)    | .NET Core 3.1 Vue CLI App with Material Vuetify |
 | [angular-lite-spa](https://github.com/NetCoreTemplates/angular-lite-spa) | .NET Core 3.1 Angular 4 Material Design Lite Webpack App |
+{% endcapture %}
+
+<div class='markdown-body pb-3'>
+{{ netcore | markdownify }}
+</div>
 
 They've also all been converted to use the new `EnableSpaFallback` feature:
 
