Update SharpData links / docs

--- a/docs/_releases/v5.9.md
+++ b/docs/_releases/v5.9.md
@@ -356,9 +356,9 @@ Then regenerate it using the full language name above or their wrist-friendly 2-
 Before we delve into the typed world of AutoCrud, we'd like to introduce the [SharpData](https://github.com/NetCoreApps/SharpData) .NET Core project -
 another generic tool (useful for non .NET devs) for providing an instant UI around multiple RDBMS's:
 
-> YouTube: [youtu.be/EJ-lDWshjcY](https://youtu.be/EJ-lDWshjcY)
+> YouTube: [youtu.be/GjVipOqwZMA](https://youtu.be/GjVipOqwZMA)
 
-[![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/release-notes/v5.9/sharpdata-custom-appsettings.png)](https://youtu.be/EJ-lDWshjcY)
+[![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/release-notes/v5.9/sharpdata-custom-appsettings.png)](https://youtu.be/GjVipOqwZMA)
 
 An impressively capable .NET Core App that fits into a tiny **20kb .zip** footprint thanks to [Gist Desktop App's Architecture](https://sharpscript.net/docs/gist-desktop-apps). It's small dynamic `#Script` & Vue TypeScript code-base also makes it highly customizable to tailor & further extend with 
 App-specific requirements - suitable for offering advanced system users a quick, capable customized read-only UI of your DBs.
